...
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_big_poster"
                            android:layout_width="match_parent"
                            android:layout_height="240dp"
                            android:background="@color/colorDark"
                            android:contentDescription="@string/image_big_poster"
                            android:foreground="@drawable/bg_gradient"
                            android:scaleType="centerCrop"
...
                        android:elevation="4dp"
                        app:cardCornerRadius="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iv_small_poster"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorDark"
                            android:contentDescription="@string/image_small_poster"
                            android:scaleType="centerCrop"
                            tools:srcCompat="@drawable/poster_aquaman" />

                    </androidx.cardview.widget.CardView>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_share"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="215dp"
                        android:layout_marginEnd="@dimen/dimen_standard"
                        android:background="@drawable/bg_icon_share"
                        app:layout_constraintEnd_toEndOf="@+id/card_view_big_poster"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_standard"
                        android:layout_marginTop="@dimen/dimen_small"
                        android:layout_marginEnd="@dimen/dimen_standard"
                        android:ellipsize="end"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/card_view_small_poster"
                        app:layout_constraintTop_toBottomOf="@+id/btn_share"
                        tools:text="How to Train Your Dragon: The Hidden World" />

                    <TextView
                        android:id="@+id/tv_runtime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_small"
                        android:layout_marginEnd="@dimen/dimen_standard"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/colorSecondary"
...
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginTop="@dimen/dimen_extra_standard"
                    android:theme="@style/Theme.AppBarOverlay"
                    app:layout_collapseMode="pin">

                    <ImageButton
                        android:id="@+id/btn_back"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:background="@drawable/bg_rounded_transparent"
                        android:contentDescription="@string/button_back_activity"
                        android:src="@drawable/ic_arrow_small_back" />

...
                    android:padding="12dp"
                    android:src="@drawable/ic_star_rate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_small"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/img_score"
                    app:layout_constraintTop_toTopOf="@+id/img_score"
                    tools:text="8.9" />

                <TextView
                    android:id="@+id/tv_vote_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_small"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/colorDark"
                    android:textSize="12sp"
...
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_score" />

                <TextView
                    android:id="@+id/tv_genres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_standard"
                    android:layout_marginTop="@dimen/dimen_extra_small"
                    android:layout_marginEnd="@dimen/dimen_standard"
                    android:fontFamily="@font/montserrat"
...
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="@string/overview"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_small"
                            android:fontFamily="@font/montserrat"
                            android:justificationMode="inter_word"
                            android:textColor="@color/white"
...
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_person"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_small"
                    android:layout_marginEnd="@dimen/dimen_standard"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/white"
...
