<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/movies"
        android:enabled="true"
        android:icon="@drawable/ic_movie"
        android:title="@string/movies" />

    <item
        android:id="@+id/tv_show"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/tv_show" />
</menu>