...
        <FrameLayout
            android:id="@+id/fm_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.ismaeldivita.chipnavigation.ChipNavigationBar
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_navigation"
            android:padding="@dimen/dimen_extra_small"
            app:cnb_menuResource="@menu/menu"
...
